2015-01-21  Lucas Forschler  <lforschler@apple.com>

        Teach build.webkit.org about bot308 and bot309.
        
        Unreviewed.
        
        * BuildSlaveSupport/build.webkit.org-config/config.json:

2015-01-21  Lucas Forschler  <lforschler@apple.com>

        Add two Apple Mavericks slaves.
        
        Unreviewed.
        
        * BuildSlaveSupport/build.webkit.org-config/config.json:

2015-01-21  Daniel Bates  <dabates@apple.com>

        Add iOS WebKit1 TestExpectation file
        https://bugs.webkit.org/show_bug.cgi?id=140739

        Reviewed by David Kilzer.

        Teach run-webkit-tests to look for iOS WebKit1-specific test results and
        expectations in directory LayoutTests/platform/ios-simulator-wk1.

        * Scripts/webkitpy/port/ios.py:
        (IOSSimulatorPort.default_baseline_search_path):

2015-01-21  David Kilzer  <ddkilzer@apple.com>

        [iOS] Update configure-xcode-for-ios-development to copy missing headers to iphoneos SDK
        <http://webkit.org/b/140704>

        Reviewed by Daniel Bates.

        * Scripts/configure-xcode-for-ios-development:
        - Update copyright.
        - Remove FIXME addressed by r178709.
        - Call copyMissingHeadersToIPhoneOSSDKIfNeeded().
        (copyMissingHeadersToIPhoneOSSDKIfNeeded): Add method to copy
        missing headers from iphonesimulator SDK to iphoneos SDK.
        (sdkDirectory): Add method that returns SDK directory.
        (sdkPlatformDirectory): Extract method from
        xcodeSDKSpecificationsPath() that returns SDK platform
        directory.
        (xcodeSDKSpecificationsPath): Update to use
        sdkPlatformDirectory().

2015-01-21  Alexey Proskuryakov  <ap@apple.com>

        https://build.webkit.org/dashboard/metrics.html fails because of ios-ews
        https://bugs.webkit.org/show_bug.cgi?id=140731

        Reviewed by Tim Horton.

        * BuildSlaveSupport/build.webkit.org-config/public_html/dashboard/Scripts/MetricsAnalyzer.js: