@@ -1,10 +1,10 @@
 {
     "slaves":     [ { "name": "test-slave", "platform": "*" },
 
-                    { "name": "bot629",  "platform": "mac-mavericks" },
-                    { "name": "bot198",  "platform": "mac-mavericks" },
-                    { "name": "bot199",  "platform": "mac-mavericks" },
-                    { "name": "bot200",  "platform": "mac-mavericks" },
+                    { "name": "bot629", "platform": "mac-mavericks" },
+                    { "name": "bot198", "platform": "mac-mavericks" },
+                    { "name": "bot199", "platform": "mac-mavericks" },
+                    { "name": "bot200", "platform": "mac-mavericks" },
                     { "name": "bot101", "platform": "mac-mavericks" },
                     { "name": "bot124", "platform": "mac-mavericks" },
                     { "name": "bot105", "platform": "mac-mavericks" },
@@ -19,6 +19,10 @@
                     { "name": "bot306", "platform": "mac-mavericks" },
                     { "name": "bot308", "platform": "mac-mavericks" },
                     { "name": "bot309", "platform": "mac-mavericks" },
+                    { "name": "bot310", "platform": "mac-mavericks" },
+                    { "name": "bot311", "platform": "mac-mavericks" },
+                    { "name": "bot312", "platform": "mac-mavericks" },
+                    { "name": "bot313", "platform": "mac-mavericks" },
 
                     { "name": "bot139", "platform": "mac-yosemite" },
                     { "name": "bot148", "platform": "mac-yosemite" },
@@ -37,6 +41,14 @@
                     { "name": "bot192", "platform": "mac-yosemite" },
                     { "name": "bot193", "platform": "mac-yosemite" },
                     { "name": "bot194", "platform": "mac-yosemite" },
+                    { "name": "bot314", "platform": "mac-yosemite" },
+                    { "name": "bot315", "platform": "mac-yosemite" },
+                    { "name": "bot316", "platform": "mac-yosemite" },
+                    { "name": "bot317", "platform": "mac-yosemite" },
+                    { "name": "bot318", "platform": "mac-yosemite" },
+                    { "name": "bot318", "platform": "mac-yosemite" },
+                    { "name": "bot319", "platform": "mac-yosemite" },
+                    { "name": "bot320", "platform": "mac-yosemite" },
 
                     { "name": "bot516", "platform": "win" },
                     { "name": "bot514", "platform": "win" },
@@ -99,12 +111,12 @@
                     { "name": "Apple Mavericks Release WK1 (Tests)", "type": "Test", "builddir": "mavericks-release-tests-wk1",
                       "platform": "mac-mavericks", "configuration": "release", "architectures": ["x86_64"],
                       "additionalArguments": ["--no-retry-failures"],
-                      "slavenames": ["bot199", "bot151"]
+                      "slavenames": ["bot199", "bot151", "bot310", "bot311"]
                     },
                     { "name": "Apple Mavericks Release WK2 (Tests)", "type": "TestWebKit2", "builddir": "mavericks-release-tests-wk2",
                       "platform": "mac-mavericks", "configuration": "release", "architectures": ["x86_64"],
                       "additionalArguments": ["--no-retry-failures"],
-                      "slavenames": ["bot200", "bot152"]
+                      "slavenames": ["bot200", "bot152", "bot312", "bot313"]
                     },
                     {
                       "name": "Apple Mavericks Release (Perf)", "type": "DownloadAndPerfTest", "builddir": "mavericks-release-perf-tests",
@@ -118,11 +130,11 @@
                     },
                     { "name": "Apple Yosemite Debug WK1 (Tests)", "type": "Test", "builddir": "yosemite-debug-tests-wk1",
                       "platform": "mac-yosemite", "configuration": "debug", "architectures": ["x86_64"],
-                      "slavenames": ["bot182", "bot183"]
+                      "slavenames": ["bot182", "bot183", "bot314", "bot315"]
                     },
                     { "name": "Apple Yosemite Debug WK2 (Tests)", "type": "TestWebKit2", "builddir": "yosemite-debug-tests-wk2",
                       "platform": "mac-yosemite", "configuration": "debug", "architectures": ["x86_64"],
-                      "slavenames": ["bot184", "bot185"]
+                      "slavenames": ["bot184", "bot185", "bot315", "bot316"]
                     },
                     { "name": "Apple Yosemite LLINT CLoop (BuildAndTest)", "type": "BuildAndTestLLINTCLoop", "builddir": "yosemite-cloop-debug",
                       "platform": "mac-yosemite", "configuration": "debug", "architectures": ["x86_64"],
@@ -140,12 +152,12 @@
                     { "name": "Apple Yosemite Release WK1 (Tests)", "type": "Test", "builddir": "yosemite-release-tests-wk1",
                       "platform": "mac-yosemite", "configuration": "release", "architectures": ["x86_64"],
                       "additionalArguments": ["--no-retry-failures"],
-                      "slavenames": ["bot190", "bot191"]
+                      "slavenames": ["bot190", "bot191", "bot317", "bot318"]
                     },
                     { "name": "Apple Yosemite Release WK2 (Tests)", "type": "TestWebKit2", "builddir": "yosemite-release-tests-wk2",
                       "platform": "mac-yosemite", "configuration": "release", "architectures": ["x86_64"],
                       "additionalArguments": ["--no-retry-failures"],
-                      "slavenames": ["bot192", "bot193"]
+                      "slavenames": ["bot192", "bot193", "bot319", "bot320]
                     },
                     {
                       "name": "Apple Yosemite Release (Perf)", "type": "DownloadAndPerfTest", "builddir": "yosemite-release-perf-tests",
